fix(ui): prevent scroll glitches on mobile by using dvh units

--- a/components/ArtTechSection/ArtTechSection.module.scss
+++ b/components/ArtTechSection/ArtTechSection.module.scss
@@ -3,7 +3,7 @@
 
 .container {
   background-color: $color-bg;
-  height: 100vh;
+  height: 100dvh;
   padding: $space-48;
   padding-top: $space-48 * 4;
   color: $text-white;
