--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -4,7 +4,7 @@
 .container {
   background-color: $color-bg;
   // height: 600px;
-  height: 100vh;
+  height: 100dvh;
   padding: $space-48;
   display: flex;
   flex-direction: column;
